cmd/jira-daily-diff/manifests/jira-daily-diff.service.yml
apiVersion: v1
kind: Service
metadata:
  name: jira-daily-diff
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: web
  selector:
    app: jira-daily-diff
  type: ClusterIP
